--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nauhyuh</title>
-    <meta name="description" content="Chào Mừng bạn đã đến với profile của Nauhyuh">
-    <meta name="keywords" content="nauhyuh, nauhyuh dev">
+    <title>HuanTH</title>
+    <meta name="description" content="Chào Mừng bạn đã đến với profile của HuanTH">
+    <meta name="keywords" content="HuanTH, HuanTH dev">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Nauhyuh">
+    <meta property="og:title" content="HuanTH">
     <meta property="og:description" content="Chào Mừng bạn đã đến với profile của Nauhyuh">
     <meta property="og:image" content="https://raw.githubusercontent.com/niyakipham/assets/kaguya.jpeg">
-    <link rel="canonical" href="https://niyakipham.github.io/">
-    <link rel="icon" href="https://niyakipham.github.io/assets/kaguya.jpeg" type="image/x-icon">
+    <link rel="canonical" href="https://huanth.github.io/">
+    <link rel="icon" href="https://huanth.github.io/assets/kaguya.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -27,9 +27,9 @@
       <div id="profile">
         <img id="cut"
           src="./assets/kaguya.jpeg"
-          alt="avatar cua niyaki"
+          alt="huanth avatar"
         />
-        <p>@nauhyuh</p>
+        <p>@huanth</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -38,8 +38,9 @@
       </div>
 
       <p class="welcome-text">Thank you for visiting my personal page.</p>
-
+      
       <!-- <ul></ul> -->
+      
       <div id="social-links">
         <a href="https://github.com/huanth" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
@@ -55,7 +56,7 @@
       </div>
 
       <footer>
-        @2025 Copyright by <a href="https://github.com/huanth">Nauhyuh</a>
+        @2025 Copyright by <a href="https://github.com/huanth">HuanTH</a>
       </footer>
     </div>
 
