--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </main>
         
         <footer>
-            © <span id="year">2025</span> Niyaki Pham
+            © <span id="year">2025</span> HuanTH
         </footer>
     </div>
 
